force-app/main/default/objects/SSR_Lead_Scoring_Config__mdt/SSR_Lead_Scoring_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration du scoring et du routage des leads (SSR Recipe 10) : seuils, cible d'assignation, campagne de nurturing, ICP.</description>
    <label>SSR Lead Scoring Config</label>
    <pluralLabel>SSR Lead Scoring Configs</pluralLabel>
</CustomObject>