force-app/main/default/objects/SSR_Lead_Scoring_Config__mdt/fields/Disqualified_Status__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Status__c</fullName>
    <description>Valeur Lead.Status appliquée à la disqualification (ex. "Closed - Not Converted"). Vide = seul le motif est écrit, le statut n'est pas touché.</description>
    <label>Disqualified Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>