force-app/main/default/objects/SSR_Lead_Scoring_Config__mdt/fields/High_Threshold__c.field-meta.xml
<CustomField>
    <fullName>High_Threshold__c</fullName>
    <description>Score minimum (inclus) pour router un lead en HOT (assignation + tâche de rappel).</description>
    <label>High Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>