force-app/main/default/objects/SSR_Lead_Scoring_Config__mdt/fields/Hot_Lead_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Hot_Lead_Owner_Id__c</fullName>
    <description>Id (User 005... ou Queue 00G...) qui récupère les leads HOT. Vide = pas de réassignation.</description>
    <label>Hot Lead Owner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>