force-app/main/default/objects/SSR_Lead_Scoring_Config__mdt/fields/Icp_Description__c.field-meta.xml
<CustomField>
    <fullName>Icp_Description__c</fullName>
    <description>Description du profil client idéal (ICP) injectée dans le prompt LLM.</description>
    <label>ICP Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>