force-app/main/default/objects/SSR_Lead_Scoring_Config__mdt/fields/Low_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Low_Threshold__c</fullName>
    <description>Score sous lequel (exclus) un lead est disqualifié. Entre les deux seuils : nurturing.</description>
    <label>Low Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>