force-app/main/default/objects/SSR_Lead_Scoring_Config__mdt/fields/Nurture_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Nurture_Campaign_Id__c</fullName>
    <description>Id de campagne (701...) à laquelle ajouter les leads en nurturing. Vide = pas d'ajout.</description>
    <label>Nurture Campaign Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>