force-app/main/default/objects/SSR_Lead_Scoring_Config__mdt/fields/Slack_Recipe_Key__c.field-meta.xml
<CustomField>
    <fullName>Slack_Recipe_Key__c</fullName>
    <description>Clé SSR_Slack_Recipe__mdt qui résout le channel de notification (défaut recipe_10). Si non résolue : fallback e-mail à l'owner.</description>
    <label>Slack Recipe Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>